--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Meta tags, title, and styles -->
     <title>SHIFT EngageTracker</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
