Fetch representante RIMAC

--- a/public/member-report.html
+++ b/public/member-report.html
@@ -9,7 +9,7 @@
     <div class="container">
       <h1>Reporte de Actividad del Asociado</h1>
       <h2>Socio: Rimac Seguros y Reaseguros S.A.</h2>
-      <h3>Representantes: <span id="representantes-data"></span></h3>
+      <h3>Representantes: <!--<span id="representantes-data"></span> --> </h3>
       <p>Periodo del Reporte: 02 de enero al 29 de diciembre del 2023</p>
 
       <section id="learningParticipation">
