--- a/public/member-report.html
+++ b/public/member-report.html
@@ -9,7 +9,7 @@
     <div class="container">
       <h1>Reporte de Actividad del Asociado</h1>
       <h2>Socio: Rimac Seguros y Reaseguros S.A.</h2>
-      <h3>Representantes: <!--<span id="representantes-data"></span> --> </h3>
+      <h3>Representantes: <span id="representantes-data"></span></h3>
       <p>Periodo del Reporte: 02 de enero al 29 de diciembre del 2023</p>
 
       <section id="learningParticipation">
@@ -41,17 +41,20 @@
       </section>
     </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        fetch("/api/representantes")
-          .then((response) => response.json())
-          .then((data) => {
-            const dataDiv = document.getElementById("representantes-data");
-            dataDiv.innerHTML =
-              "<pre>" + JSON.stringify(data, null, 2) + "</pre>";
-          })
-          .catch((error) => console.error("Error fetching data:", error));
-      });
-    </script>
+<script>
+document.addEventListener("DOMContentLoaded", async function () {
+  try {
+    const response = await fetch("/api/representantes");
+    const data = await response.json();
+    const dataDiv = document.getElementById("representantes-data");
+    dataDiv.innerHTML = data.join(', ');
+
+    // This part will print the data from fetchRepresentantes
+    console.log(data);
+  } catch (error) {
+    console.error("Error fetching data:", error);
+  }
+});
+</script>
   </body>
 </html>
