Added a route from my index.html

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
     <div class="container">
       <h1>Welcome to SHIFT EngageTracker</h1>
       <button onclick="window.location.href='p2p-sessions.html'">View P2P Sessions</button>
-
+      <button onclick="window.location.href='member-report.html'">View Member Reports</button>
     </div>
-
     <script></script>
   </body>
 </html>
